k8s/alb.aliyun/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    alb.ingress.kubernetes.io/ssl-redirect: "true"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
spec:
  ingressClassName: alb
  tls:
    - hosts:
      - auth.teamkits.online
  rules:
    - host: auth.teamkits.online
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: login-svc
                port:
                  number: 443
